--- a/.github/workflows/todoist.yml
+++ b/.github/workflows/todoist.yml
@@ -19,6 +19,16 @@ jobs:
           BEFORE: ${{ github.event.before }}
           SHA: ${{ github.sha }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LABEL: "# TODO"
-          COMMENT_MARKER: "#"
+          LABEL: "// TODO"
+          COMMENT_MARKER: "//"
+        id: "todo //"
+      - name: "TODO to Issue"
+        uses: "alstr/todo-to-issue-action@master"
+        with:
+          REPO: ${{ github.repository }}
+          BEFORE: ${{ github.event.before }}
+          SHA: ${{ github.sha }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LABEL: "<!-- TODO"
+          COMMENT_MARKER: "<!--"
         id: "todo"
